--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -23,7 +23,7 @@ block wrapper
       .heading__col.heading__col_cart-summ.h6.mb-2 Сумма
     form.table-row(action="#")
       .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.md-md-0
+        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
           a.d-block(href="#")
             +img('content/cards/card-1.jpg')
         .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
@@ -51,7 +51,7 @@ block wrapper
             +icon('close')
     form.table-row(action="#")
       .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.md-md-0
+        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
           a.d-block(href="#")
             +img('content/cards/card-1.jpg')
         .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
@@ -79,7 +79,7 @@ block wrapper
             +icon('close')
     form.table-row.mb-4(action="#")
       .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.md-md-0
+        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
           a.d-block(href="#")
             +img('content/cards/card-1.jpg')
         .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
