--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -50,7 +50,7 @@ block wrapper
                   button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_remove(type="button") -
                   .recalculate__value.d-flex.align-items-center.justify-content-center.color-theme-white 4
                   button.recalculate__btn.font-weight-bold.color-theme-white.flex-grow-1.recalculate__btn_add(type="button") +
-              a.btn.text-uppercase.px-3.mr-sm-4(href="#") В корзину
+              button.btn.text-uppercase.px-3.mr-sm-4(type="submit") В корзину
             .col-xl-3.col-md-4.col-sm-6.text-center.text-sm-left
               button.btn.btn_nobg.h5.p-0(type="button")
                 +icon('plane','h3 color-theme-brand mr-2')
