--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -165,6 +165,8 @@ block wrapper
           +svg('checked-double')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('readmore-right')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('photo')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -334,5 +336,7 @@ block wrapper
           span.h1.ds-icon-checked-double
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-readmore-right
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-photo
 
 block footer
