--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -1,8 +1,6 @@
 $icomoon-font-family: "donshina" !default;
 $icomoon-font-path: "../fonts" !default;
 
-$ds-icon-checked-double: "\e955";
-$ds-icon-readmore-right: "\e956";
 $ds-icon-allseason-path1: "\e900";
 $ds-icon-allseason-path2: "\e901";
 $ds-icon-arrow-left: "\e902";
@@ -16,75 +14,78 @@ $ds-icon-card: "\e909";
 $ds-icon-cart: "\e90a";
 $ds-icon-case: "\e90b";
 $ds-icon-checked: "\e90c";
-$ds-icon-close: "\e90d";
-$ds-icon-close-noborder: "\e90e";
-$ds-icon-compare: "\e90f";
-$ds-icon-continue: "\e910";
-$ds-icon-credit: "\e911";
-$ds-icon-delivery: "\e912";
-$ds-icon-desc: "\e913";
-$ds-icon-dropdown: "\e914";
-$ds-icon-edit: "\e915";
-$ds-icon-email: "\e916";
-$ds-icon-emoji: "\e917";
-$ds-icon-exit: "\e918";
-$ds-icon-eye: "\e919";
-$ds-icon-facebook: "\e91a";
-$ds-icon-favourite: "\e91b";
-$ds-icon-filter: "\e91c";
-$ds-icon-founding-path1: "\e91d";
-$ds-icon-founding-path2: "\e91e";
-$ds-icon-gift: "\e91f";
-$ds-icon-instagram: "\e920";
-$ds-icon-iron: "\e921";
-$ds-icon-list: "\e922";
-$ds-icon-logo-path1: "\e923";
-$ds-icon-logo-path2: "\e924";
-$ds-icon-logo-path3: "\e925";
-$ds-icon-logo-path4: "\e926";
-$ds-icon-logo-path5: "\e927";
-$ds-icon-logo-path6: "\e928";
-$ds-icon-menu: "\e929";
-$ds-icon-moto: "\e92a";
-$ds-icon-nonspikes: "\e92b";
-$ds-icon-notify: "\e92c";
-$ds-icon-oil: "\e92d";
-$ds-icon-phone: "\e92e";
-$ds-icon-phonehandset: "\e92f";
-$ds-icon-phone-nobg: "\e930";
-$ds-icon-placemark: "\e931";
-$ds-icon-plane: "\e932";
-$ds-icon-points: "\e933";
-$ds-icon-readmore: "\e934";
-$ds-icon-readmore-reversed: "\e935";
-$ds-icon-repair: "\e936";
-$ds-icon-reviews: "\e937";
-$ds-icon-scales: "\e938";
-$ds-icon-search: "\e939";
-$ds-icon-services: "\e93a";
-$ds-icon-settings: "\e93b";
-$ds-icon-share: "\e93c";
-$ds-icon-shield: "\e93d";
-$ds-icon-spikes: "\e93e";
-$ds-icon-steel-path1: "\e93f";
-$ds-icon-steel-path2: "\e940";
-$ds-icon-summer: "\e941";
-$ds-icon-target: "\e942";
-$ds-icon-tg: "\e943";
-$ds-icon-tg-filled: "\e944";
-$ds-icon-tile: "\e945";
-$ds-icon-time: "\e946";
-$ds-icon-tires: "\e947";
-$ds-icon-tool: "\e948";
-$ds-icon-trash: "\e949";
-$ds-icon-user: "\e94a";
-$ds-icon-view: "\e94b";
-$ds-icon-vk: "\e94c";
-$ds-icon-wallet: "\e94d";
-$ds-icon-wapp: "\e94e";
-$ds-icon-wapp-filled: "\e94f";
-$ds-icon-warranty: "\e950";
-$ds-icon-wheels: "\e951";
-$ds-icon-winter: "\e952";
-$ds-icon-youtube: "\e953";
-$ds-icon-zoom: "\e954";
+$ds-icon-checked-double: "\e90d";
+$ds-icon-close: "\e90e";
+$ds-icon-close-noborder: "\e90f";
+$ds-icon-compare: "\e910";
+$ds-icon-continue: "\e911";
+$ds-icon-credit: "\e912";
+$ds-icon-delivery: "\e913";
+$ds-icon-desc: "\e914";
+$ds-icon-dropdown: "\e915";
+$ds-icon-edit: "\e916";
+$ds-icon-email: "\e917";
+$ds-icon-emoji: "\e918";
+$ds-icon-exit: "\e919";
+$ds-icon-eye: "\e91a";
+$ds-icon-facebook: "\e91b";
+$ds-icon-favourite: "\e91c";
+$ds-icon-filter: "\e91d";
+$ds-icon-founding-path1: "\e91e";
+$ds-icon-founding-path2: "\e91f";
+$ds-icon-gift: "\e920";
+$ds-icon-instagram: "\e921";
+$ds-icon-iron: "\e922";
+$ds-icon-list: "\e923";
+$ds-icon-logo-path1: "\e924";
+$ds-icon-logo-path2: "\e925";
+$ds-icon-logo-path3: "\e926";
+$ds-icon-logo-path4: "\e927";
+$ds-icon-logo-path5: "\e928";
+$ds-icon-logo-path6: "\e929";
+$ds-icon-menu: "\e92a";
+$ds-icon-moto: "\e92b";
+$ds-icon-nonspikes: "\e92c";
+$ds-icon-notify: "\e92d";
+$ds-icon-oil: "\e92e";
+$ds-icon-phone: "\e92f";
+$ds-icon-phonehandset: "\e930";
+$ds-icon-phone-nobg: "\e931";
+$ds-icon-photo: "\e932";
+$ds-icon-placemark: "\e933";
+$ds-icon-plane: "\e934";
+$ds-icon-points: "\e935";
+$ds-icon-readmore: "\e936";
+$ds-icon-readmore-reversed: "\e937";
+$ds-icon-readmore-right: "\e938";
+$ds-icon-repair: "\e939";
+$ds-icon-reviews: "\e93a";
+$ds-icon-scales: "\e93b";
+$ds-icon-search: "\e93c";
+$ds-icon-services: "\e93d";
+$ds-icon-settings: "\e93e";
+$ds-icon-share: "\e93f";
+$ds-icon-shield: "\e940";
+$ds-icon-spikes: "\e941";
+$ds-icon-steel-path1: "\e942";
+$ds-icon-steel-path2: "\e943";
+$ds-icon-summer: "\e944";
+$ds-icon-target: "\e945";
+$ds-icon-tg: "\e946";
+$ds-icon-tg-filled: "\e947";
+$ds-icon-tile: "\e948";
+$ds-icon-time: "\e949";
+$ds-icon-tires: "\e94a";
+$ds-icon-tool: "\e94b";
+$ds-icon-trash: "\e94c";
+$ds-icon-user: "\e94d";
+$ds-icon-view: "\e94e";
+$ds-icon-vk: "\e94f";
+$ds-icon-wallet: "\e950";
+$ds-icon-wapp: "\e951";
+$ds-icon-wapp-filled: "\e952";
+$ds-icon-warranty: "\e953";
+$ds-icon-wheels: "\e954";
+$ds-icon-winter: "\e955";
+$ds-icon-youtube: "\e956";
+$ds-icon-zoom: "\e957";
