--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -75,5 +75,6 @@ $grid-gutter-width: 8px;
 @import 'tpl/notify';
 @import 'tpl/review';
 @import 'tpl/params';
+@import 'tpl/bubble';
 @import 'tpl/result';
 @import 'tpl/footer';
