--- a/src/pug/ui_icons.pug
+++ b/src/pug/ui_icons.pug
@@ -167,6 +167,8 @@ block wrapper
           +svg('readmore-right')
         .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
           +svg('photo')
+        .d-inline-block.pr-5.mb-1(style="width:80px;height:80px;")
+          +svg('detail')
     .col-md-3
       .d-flex.flex-column
         .h2.font-weight-bold.mb-2 Шрифт
@@ -338,5 +340,7 @@ block wrapper
           span.h1.ds-icon-readmore-right
         .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
           span.h1.ds-icon-photo
+        .d-flex.flex-column.justify-content-center.pr-5.mb-1(style="width:80px;height:80px;")
+          span.h1.ds-icon-detail
 
 block footer
