--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -20,7 +20,7 @@ block wrapper
 
       .filter.filter_sticky
         .filter__body
-          .section.bg-theme-white.py-0.mb-lg-3
+          .section.section_filter.bg-theme-white.py-0.mb-lg-3
             .section__expander.d-flex.align-items-center.justify-content-between.cursor-pointer.px-md-4.px-3.py-2
               button.btn.btn_nobg.h4.p-0(type="button")
                 +icon('settings','color-theme-brand h3 mr-2')
