--- a/src/scss/icons/variables.scss
+++ b/src/scss/icons/variables.scss
@@ -22,70 +22,71 @@ $ds-icon-continue: "\e911";
 $ds-icon-credit: "\e912";
 $ds-icon-delivery: "\e913";
 $ds-icon-desc: "\e914";
-$ds-icon-dropdown: "\e915";
-$ds-icon-edit: "\e916";
-$ds-icon-email: "\e917";
-$ds-icon-emoji: "\e918";
-$ds-icon-exit: "\e919";
-$ds-icon-eye: "\e91a";
-$ds-icon-facebook: "\e91b";
-$ds-icon-favourite: "\e91c";
-$ds-icon-filter: "\e91d";
-$ds-icon-founding-path1: "\e91e";
-$ds-icon-founding-path2: "\e91f";
-$ds-icon-gift: "\e920";
-$ds-icon-instagram: "\e921";
-$ds-icon-iron: "\e922";
-$ds-icon-list: "\e923";
-$ds-icon-logo-path1: "\e924";
-$ds-icon-logo-path2: "\e925";
-$ds-icon-logo-path3: "\e926";
-$ds-icon-logo-path4: "\e927";
-$ds-icon-logo-path5: "\e928";
-$ds-icon-logo-path6: "\e929";
-$ds-icon-menu: "\e92a";
-$ds-icon-moto: "\e92b";
-$ds-icon-nonspikes: "\e92c";
-$ds-icon-notify: "\e92d";
-$ds-icon-oil: "\e92e";
-$ds-icon-phone: "\e92f";
-$ds-icon-phonehandset: "\e930";
-$ds-icon-phone-nobg: "\e931";
-$ds-icon-photo: "\e932";
-$ds-icon-placemark: "\e933";
-$ds-icon-plane: "\e934";
-$ds-icon-points: "\e935";
-$ds-icon-readmore: "\e936";
-$ds-icon-readmore-reversed: "\e937";
-$ds-icon-readmore-right: "\e938";
-$ds-icon-repair: "\e939";
-$ds-icon-reviews: "\e93a";
-$ds-icon-scales: "\e93b";
-$ds-icon-search: "\e93c";
-$ds-icon-services: "\e93d";
-$ds-icon-settings: "\e93e";
-$ds-icon-share: "\e93f";
-$ds-icon-shield: "\e940";
-$ds-icon-spikes: "\e941";
-$ds-icon-steel-path1: "\e942";
-$ds-icon-steel-path2: "\e943";
-$ds-icon-summer: "\e944";
-$ds-icon-target: "\e945";
-$ds-icon-tg: "\e946";
-$ds-icon-tg-filled: "\e947";
-$ds-icon-tile: "\e948";
-$ds-icon-time: "\e949";
-$ds-icon-tires: "\e94a";
-$ds-icon-tool: "\e94b";
-$ds-icon-trash: "\e94c";
-$ds-icon-user: "\e94d";
-$ds-icon-view: "\e94e";
-$ds-icon-vk: "\e94f";
-$ds-icon-wallet: "\e950";
-$ds-icon-wapp: "\e951";
-$ds-icon-wapp-filled: "\e952";
-$ds-icon-warranty: "\e953";
-$ds-icon-wheels: "\e954";
-$ds-icon-winter: "\e955";
-$ds-icon-youtube: "\e956";
-$ds-icon-zoom: "\e957";
+$ds-icon-detail: "\e915";
+$ds-icon-dropdown: "\e916";
+$ds-icon-edit: "\e917";
+$ds-icon-email: "\e918";
+$ds-icon-emoji: "\e919";
+$ds-icon-exit: "\e91a";
+$ds-icon-eye: "\e91b";
+$ds-icon-facebook: "\e91c";
+$ds-icon-favourite: "\e91d";
+$ds-icon-filter: "\e91e";
+$ds-icon-founding-path1: "\e91f";
+$ds-icon-founding-path2: "\e920";
+$ds-icon-gift: "\e921";
+$ds-icon-instagram: "\e922";
+$ds-icon-iron: "\e923";
+$ds-icon-list: "\e924";
+$ds-icon-logo-path1: "\e925";
+$ds-icon-logo-path2: "\e926";
+$ds-icon-logo-path3: "\e927";
+$ds-icon-logo-path4: "\e928";
+$ds-icon-logo-path5: "\e929";
+$ds-icon-logo-path6: "\e92a";
+$ds-icon-menu: "\e92b";
+$ds-icon-moto: "\e92c";
+$ds-icon-nonspikes: "\e92d";
+$ds-icon-notify: "\e92e";
+$ds-icon-oil: "\e92f";
+$ds-icon-phone: "\e930";
+$ds-icon-phonehandset: "\e931";
+$ds-icon-phone-nobg: "\e932";
+$ds-icon-photo: "\e933";
+$ds-icon-placemark: "\e934";
+$ds-icon-plane: "\e935";
+$ds-icon-points: "\e936";
+$ds-icon-readmore: "\e937";
+$ds-icon-readmore-reversed: "\e938";
+$ds-icon-readmore-right: "\e939";
+$ds-icon-repair: "\e93a";
+$ds-icon-reviews: "\e93b";
+$ds-icon-scales: "\e93c";
+$ds-icon-search: "\e93d";
+$ds-icon-services: "\e93e";
+$ds-icon-settings: "\e93f";
+$ds-icon-share: "\e940";
+$ds-icon-shield: "\e941";
+$ds-icon-spikes: "\e942";
+$ds-icon-steel-path1: "\e943";
+$ds-icon-steel-path2: "\e944";
+$ds-icon-summer: "\e945";
+$ds-icon-target: "\e946";
+$ds-icon-tg: "\e947";
+$ds-icon-tg-filled: "\e948";
+$ds-icon-tile: "\e949";
+$ds-icon-time: "\e94a";
+$ds-icon-tires: "\e94b";
+$ds-icon-tool: "\e94c";
+$ds-icon-trash: "\e94d";
+$ds-icon-user: "\e94e";
+$ds-icon-view: "\e94f";
+$ds-icon-vk: "\e950";
+$ds-icon-wallet: "\e951";
+$ds-icon-wapp: "\e952";
+$ds-icon-wapp-filled: "\e953";
+$ds-icon-warranty: "\e954";
+$ds-icon-wheels: "\e955";
+$ds-icon-winter: "\e956";
+$ds-icon-youtube: "\e957";
+$ds-icon-zoom: "\e958";
