--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,8 @@ $grid-gutter-width: 8px;
 @import 'tpl/media';
 @import 'tpl/sales';
 @import 'tpl/filter';
+@import 'tpl/filter-btn';
+@import 'tpl/filter-toggler';
 @import 'tpl/banner';
 @import 'tpl/social';
 @import 'tpl/search';
