--- a/src/scss/tpl/_section.scss
+++ b/src/scss/tpl/_section.scss
@@ -9,6 +9,18 @@
       border-radius: 0;
     }
   }
+
+  &.section_filter {
+    @include media-breakpoint-down(md) {
+      border-radius: 0;
+    }
+
+    .section__expander {
+      @include media-breakpoint-down(md) {
+        border-color: $color__border;
+      }
+    }
+  }
 }
 
 .section__picture {
