--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/filter';
 @import 'tpl/filter-btn';
 @import 'tpl/filter-toggler';
+@import 'tpl/category-menu';
 @import 'tpl/banner';
 @import 'tpl/social';
 @import 'tpl/search';
