--- a/src/pug/base/filter-details.pug
+++ b/src/pug/base/filter-details.pug
@@ -164,7 +164,7 @@
         button.readmore.d-flex.align-items-center(type="submit" data-toggle="list" data-target="#brand")
           span.h6.mr-2.pointer-events-none Показать еще
           +icon('readmore','h3 color-theme-brand readmore__icon')
-    .filter__alert.d-none.-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:190px;")
+    .filter__alert.d-flex.align-items-center.justify-content-between.flex-lg-column.color-theme-white.bg-theme-brand.px-lg-3.pt-lg-1.pb-lg-3.py-3.px-4(style="top:190px;")
       .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
         .h5.font-weight-normal.mr-2 Найдено:
         | 713
