--- a/src/pug/personal-vin.pug
+++ b/src/pug/personal-vin.pug
@@ -99,30 +99,29 @@ block personal
       .heading__col.h6.mb-2 Дата
       .heading__col.h6.mb-2 Vin-код
       .heading__col.h6.mb-2 Наименование запчасти
-    .table-row
-      .table-row__header.table-row__header_vin.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер:
-          span.text-right.text-md-left 174
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.d-block.d-md-none Дата:
-          span.text-right.text-md-left 10.08.2021
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.text-oneline.d-block.d-md-none Vin-код:
-          span.text-right.text-md-left WAUBH54B11N111054
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
-          span.table-row__title.text-oneline.d-block.d-md-none Наименование запчасти:
-          span.text-right.text-md-left Передняя ступица для использования с 14"/15" тормозной
-      .table-row__header.table-row__header_vin.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер:
-          span.text-right.text-md-left 175
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.d-block.d-md-none Дата:
-          span.text-right.text-md-left 10.08.2021
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.text-oneline.d-block.d-md-none Vin-код:
-          span.text-right.text-md-left WAUBH54B11N111054
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
-          span.table-row__title.text-oneline.d-block.d-md-none Наименование запчасти:
-          span.text-right.text-md-left Передняя ступица для использования с 14"/15" тормозной
+    .table-row.table-row_vin.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер:
+        span.text-right.text-md-left 174
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.d-block.d-md-none Дата:
+        span.text-right.text-md-left 10.08.2021
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.text-oneline.d-block.d-md-none Vin-код:
+        span.text-right.text-md-left WAUBH54B11N111054
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
+        span.table-row__title.text-oneline.d-block.d-md-none Наименование запчасти:
+        span.text-right.text-md-left Передняя ступица для использования с 14"/15" тормозной
+    .table-row.table-row_vin.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер:
+        span.text-right.text-md-left 175
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.d-block.d-md-none Дата:
+        span.text-right.text-md-left 10.08.2021
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.text-oneline.d-block.d-md-none Vin-код:
+        span.text-right.text-md-left WAUBH54B11N111054
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
+        span.table-row__title.text-oneline.d-block.d-md-none Наименование запчасти:
+        span.text-right.text-md-left Передняя ступица для использования с 14"/15" тормозной
