--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -21,90 +21,87 @@ block wrapper
       .heading__col.heading__col_cart-price.h6.mb-2 Цена
       .heading__col.heading__col_cart-quantity.h6.mb-2 Количество
       .heading__col.heading__col_cart-summ.h6.mb-2 Сумма
-    form.table-row(action="#")
-      .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-          a.d-block(href="#")
-            +img('content/cards/card-1.jpg')
-        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-          a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
-        .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
-          .d-block.d-md-none.mr-1 Цена:
-          span.d-flex.h3
-            span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
-            | ₽
-        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
-          .d-flex.align-items-center
-            +icon('close-noborder', 'h4 color-theme-disabled mr-3')
-            .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
-              input.recalculate__field.d-none(type="number" name="count" value="1")
-              button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
-              .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
-              button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
-        .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
-          .d-block.d-md-none.mr-3 Сумма:
-          span.d-flex.h3
-            span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
-            | ₽
-        .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-          button.h2.btn-unstyled.color-theme-brand(type="button")
-            +icon('close')
-    form.table-row(action="#")
-      .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-          a.d-block(href="#")
-            +img('content/cards/card-1.jpg')
-        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-          a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
-        .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
-          .d-block.d-md-none.mr-1 Цена:
-          span.d-flex.h3
-            span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
-            | ₽
-        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
-          .d-flex.align-items-center
-            +icon('close-noborder', 'h4 color-theme-disabled mr-3')
-            .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
-              input.recalculate__field.d-none(type="number" name="count" value="1")
-              button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
-              .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
-              button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
-        .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
-          .d-block.d-md-none.mr-3 Сумма:
-          span.d-flex.h3
-            span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
-            | ₽
-        .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-          button.h2.btn-unstyled.color-theme-brand(type="button")
-            +icon('close')
-    form.table-row.mb-4(action="#")
-      .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-          a.d-block(href="#")
-            +img('content/cards/card-1.jpg')
-        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-          a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
-        .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
-          .d-block.d-md-none.mr-1 Цена:
-          span.d-flex.h3
-            span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
-            | ₽
-        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
-          .d-flex.align-items-center
-            +icon('close-noborder', 'h4 color-theme-disabled mr-3')
-            .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
-              input.recalculate__field.d-none(type="number" name="count" value="1")
-              button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
-              .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
-              button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
-        .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
-          .d-block.d-md-none.mr-3 Сумма:
-          span.d-flex.h3
-            span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
-            | ₽
-        .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-          button.h2.btn-unstyled.color-theme-brand(type="button")
-            +icon('close')
+    form.table-row.table-row_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
+      .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
+        a.d-block(href="#")
+          +img('content/cards/card-1.jpg')
+      .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
+        a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+      .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+        .d-block.d-md-none.mr-1 Цена:
+        span.d-flex.h3
+          span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
+          | ₽
+      .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
+        .d-flex.align-items-center
+          +icon('close-noborder', 'h4 color-theme-disabled mr-3')
+          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
+            input.recalculate__field.d-none(type="number" name="count" value="1")
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
+            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+      .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+        .d-block.d-md-none.mr-3 Сумма:
+        span.d-flex.h3
+          span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
+          | ₽
+      .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
+        button.h2.btn-unstyled.color-theme-brand(type="button")
+          +icon('close')
+    form.table-row.table-row_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
+      .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
+        a.d-block(href="#")
+          +img('content/cards/card-1.jpg')
+      .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
+        a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+      .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+        .d-block.d-md-none.mr-1 Цена:
+        span.d-flex.h3
+          span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
+          | ₽
+      .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
+        .d-flex.align-items-center
+          +icon('close-noborder', 'h4 color-theme-disabled mr-3')
+          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
+            input.recalculate__field.d-none(type="number" name="count" value="1")
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
+            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+      .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+        .d-block.d-md-none.mr-3 Сумма:
+        span.d-flex.h3
+          span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
+          | ₽
+      .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
+        button.h2.btn-unstyled.color-theme-brand(type="button")
+          +icon('close')
+    form.table-row.table-row_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-4.js-cart(action="#")
+      .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
+        a.d-block(href="#")
+          +img('content/cards/card-1.jpg')
+      .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
+        a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+      .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+        .d-block.d-md-none.mr-1 Цена:
+        span.d-flex.h3
+          span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
+          | ₽
+      .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
+        .d-flex.align-items-center
+          +icon('close-noborder', 'h4 color-theme-disabled mr-3')
+          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
+            input.recalculate__field.d-none(type="number" name="count" value="1")
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
+            .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
+            button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+      .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+        .d-block.d-md-none.mr-3 Сумма:
+        span.d-flex.h3
+          span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
+          | ₽
+      .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
+        button.h2.btn-unstyled.color-theme-brand(type="button")
+          +icon('close')
     form.form.row.mb-5(action="#")
       .col-xl-8.col-md-6.d-flex.flex-wrap.align-items-start.px-0
         .col-xl-7.d-flex.flex-wrap.align-items-center.px-0
