--- a/src/pug/personal-bonus.pug
+++ b/src/pug/personal-bonus.pug
@@ -20,22 +20,21 @@ block personal
     .heading__col.h6.mb-2 Дата
     .heading__col.h6.mb-2 Детали операции
     .heading__col.h6.mb-2 Сумма начисления
-  .table-row
-    - var bonusArr = [{bonusArr__id: 174, bonusArr__title: 'Приветственные бонусы', bonusArr__value: '+ 500 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Начисление при покупке PIRELLI P Zero New', bonusArr__value: '+ 250 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Списание в счет покупки комплекта шин Cordiant Comfort 2 175/70 R13 86H', bonusArr__value: '- 350 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 174, bonusArr__title: 'Приветственные бонусы', bonusArr__value: '+ 500 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Начисление при покупке PIRELLI P Zero New', bonusArr__value: '+ 250 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Списание в счет покупки комплекта шин Cordiant Comfort 2 175/70 R13 86H', bonusArr__value: '- 350 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 174, bonusArr__title: 'Приветственные бонусы', bonusArr__value: '+ 500 Б. ₽.', bonusArr__classmod: 'color-theme-success'}]
-    each bonusArr__item in bonusArr
-      .table-row__header.table-row__header_bonus.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер заказа:
-          span.text-right.text-md-left!= bonusArr__item.bonusArr__id
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.d-block.d-md-none Дата заказа:
-          span.text-right.text-md-left 10.08.2021
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
-          span.table-row__title.text-oneline.d-block.d-md-none Детали операции:
-          span.text-right.text-md-left!= bonusArr__item.bonusArr__title
-        .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
-          span.table-row__title.text-oneline.d-block.d-md-none Сумма начисления:
-          span.text-right.text-md-left(class=bonusArr__item.bonusArr__classmod)!= bonusArr__item.bonusArr__value
+  - var bonusArr = [{bonusArr__id: 174, bonusArr__title: 'Приветственные бонусы', bonusArr__value: '+ 500 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Начисление при покупке PIRELLI P Zero New', bonusArr__value: '+ 250 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Списание в счет покупки комплекта шин Cordiant Comfort 2 175/70 R13 86H', bonusArr__value: '- 350 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 174, bonusArr__title: 'Приветственные бонусы', bonusArr__value: '+ 500 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Начисление при покупке PIRELLI P Zero New', bonusArr__value: '+ 250 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 175, bonusArr__title: 'Списание в счет покупки комплекта шин Cordiant Comfort 2 175/70 R13 86H', bonusArr__value: '- 350 Б. ₽.', bonusArr__classmod: 'color-theme-success'},{bonusArr__id: 174, bonusArr__title: 'Приветственные бонусы', bonusArr__value: '+ 500 Б. ₽.', bonusArr__classmod: 'color-theme-success'}]
+  each bonusArr__item in bonusArr
+    .table-row.table-row_bonus.box-shadow.border-radius.py-2.px-3.mb-md-2.mb-3
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.text-oneline.text-oneline.d-block.d-md-none Номер заказа:
+        span.text-right.text-md-left!= bonusArr__item.bonusArr__id
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.d-block.d-md-none Дата заказа:
+        span.text-right.text-md-left 10.08.2021
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start.mb-md-0.mb-2
+        span.table-row__title.text-oneline.d-block.d-md-none Детали операции:
+        span.text-right.text-md-left!= bonusArr__item.bonusArr__title
+      .table-row__col.table-row__col_grid.h5.d-flex.flex-md-column.justify-content-between.justify-content-md-center.align-items-center.align-items-md-start
+        span.table-row__title.text-oneline.d-block.d-md-none Сумма начисления:
+        span.text-right.text-md-left(class=bonusArr__item.bonusArr__classmod)!= bonusArr__item.bonusArr__value
 
   .section.text-center.py-2.mb-5
     a.readmore.h4.d-flex.align-items-center.justify-content-center.color-theme-brand.pr-0(href="#")
