--- a/src/scss/tpl/_table-row.scss
+++ b/src/scss/tpl/_table-row.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.table-row__header {
+.table-row {
   @include media-breakpoint-up(md) {
     display: grid;
     grid-column-gap: $grid-gutter-width;
@@ -21,7 +21,34 @@
     flex-direction: column;
   }
 
-  &.table-row__header_subcategory {
+  &.table-row_cart {
+    @include media-breakpoint-up(md) {
+      grid-gap: 8px;
+      grid-template-columns: repeat(12,1fr);
+      grid-template-areas: "cart__img cart__title cart__title cart__title cart__title cart__price cart__price cart__quantity cart__quantity cart__summ cart__summ cart__close";
+    }
+
+    @include media-breakpoint-down(sm) {
+      flex-wrap: wrap;
+      align-items: center;
+      flex-direction: row;
+      position: relative;
+    }
+  }
+
+  &.table-row_vin {
+    @include media-breakpoint-up(md) {
+      grid-template-columns: repeat(2,1fr) 2fr 5fr;
+    }
+  }
+
+  &.table-row_bonus {
+    @include media-breakpoint-up(md) {
+      grid-template-columns: 1fr 1fr 5fr 2fr;
+    }
+  }
+
+  &.table-row_subcategory {
     grid-gap: 8px;
 
     @include media-breakpoint-up(xl) {
@@ -38,37 +65,22 @@
       display: block;
     }
   }
+}
 
-  &.table-row__header_cart {
-    @include media-breakpoint-up(md) {
-      grid-gap: 8px;
-      grid-template-columns: repeat(12,1fr);
-      grid-template-areas: "cart__img cart__title cart__title cart__title cart__title cart__price cart__price cart__quantity cart__quantity cart__summ cart__summ cart__close";
-    }
+.table-row__header {
+  @include media-breakpoint-up(md) {
+    display: grid;
+    grid-column-gap: $grid-gutter-width;
+  }
 
-    @include media-breakpoint-down(sm) {
-      flex-wrap: wrap;
-      align-items: center;
-      flex-direction: row;
-      position: relative;
-    }
+  @include media-breakpoint-down(sm) {
+    display: flex;
+    flex-direction: column;
   }
 
   &.table-row__header_order {
     @include media-breakpoint-up(md) {
       grid-template-columns: repeat(2,1fr) 3fr repeat(4,1fr);
-    }
-  }
-
-  &.table-row__header_bonus {
-    @include media-breakpoint-up(md) {
-      grid-template-columns: 1fr 1fr 5fr 2fr;
-    }
-  }
-
-  &.table-row__header_vin {
-    @include media-breakpoint-up(md) {
-      grid-template-columns: repeat(2,1fr) 2fr 5fr;
     }
   }
 }
